--- a/src/css/main.css
+++ b/src/css/main.css
@@ -10,7 +10,7 @@
         @apply bg-gray-900;
     }
     .other{
-        @apply -mt-8;
+        @apply -mt-8 ml-9 pl-3  w-44 border-l-[1rem] border-gray-800;
     }
 }
 
