Add some new pages

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,6 +12,12 @@
     .other{
         @apply -mt-8 ml-9 pl-3  w-44 border-l-[1rem] border-gray-800;
     }
+    .ck-editor__editable {
+      min-height: 200px;
+  }
+  #preview-image img{
+    @apply border shadow rounded h-32 w-32;
+  }
 }
 
 @layer utilities {
@@ -31,4 +37,21 @@
   .scrollbar::-webkit-scrollbar-thumb:hover {
     @apply bg-gray-500;
   }
+
+  .scrollbar-reviews::-webkit-scrollbar {
+    width: 5px;
+  }
+  .scrollbar-reviews::-webkit-scrollbar-track {
+    @apply bg-gray-200 rounded-full;
+  }
+
+  .scrollbar-reviews::-webkit-scrollbar-thumb {
+    @apply bg-gray-400 rounded-full;
+    /* border: 3px solid rgb(17 24 39 / var(--tw-bg-opacity)); */
+  }
+
+  .scrollbar-reviews::-webkit-scrollbar-thumb:hover {
+    @apply bg-gray-500;
+  }
+
 }
